--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,11 @@ Generated\ Files/
 *.VisualState.xml
 TestResult.xml
 
+# SecretConfig
+config.json
+etrade.json
+oanda.json
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
