email logic updated

--- a/ND.Trading.Bot/ND.Trading.Bot.Engine/ND.Trading.Bot.Engine.csproj
+++ b/ND.Trading.Bot/ND.Trading.Bot.Engine/ND.Trading.Bot.Engine.csproj
@@ -58,6 +58,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Config\config.json" />
+    <None Include="Config\credential.json" />
     <None Include="Config\etrade.json" />
     <None Include="Config\oanda.json" />
     <None Include="packages.config" />
