smtp server changed to config file.

--- a/ND.Trading.Bot/ND.Trading.Bot.Engine/App.config
+++ b/ND.Trading.Bot/ND.Trading.Bot.Engine/App.config
@@ -10,6 +10,7 @@
     <add key="MongoServer" value="mongodb://localhost:27017"/>
     <add key="DBName" value="MultiThread"/>
     <add key="Environment" value="Prod"/>
+    <add key="SmtpServer" value="smtp-mail.outlook.com"/>
     <!-- ... -->
   </appSettings>
 </configuration>
